--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </div>
 
   <!-- Middle: details -->
-  <div id="details">
+  <div id="recipe-details">
     <h2 id="recipe-name" data-i18n="ui.selectRecipe">Selecione uma Receita</h2>
     <p>
       <span id="recipe-level" class="small-muted"></span>
